--- a/templates/new.html
+++ b/templates/new.html
@@ -13,6 +13,8 @@ New
     <h4> {{ new.title|censor }}</h4>
     <h1>Текст статьи</h1>
     <h4> {{ new.text|censor }}</h4>
+    <h4>{{new.postCategory}}</h4>
     <h2>Дата загрузки - {{new.dateCreation|date:'d M Y'}}</h2>
+
 
 {% endblock content %}
